# WingdingsTranslator

./: .gitignore  CMakeLists.txt  main.c
wdanalysis/: wdanalysis.c  wdanalysis.h
wdtranslator/: wdtranslator.c  wdtranslator.h
